--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
     <main class="my-failures">
         <div class="my-info">
-            <img src="/images/person.png" alt="">
+            <img src="../images/person.png" alt="">
         </div>
         <div class="my-goals"><h1>My failures of previous year</h1>
             <p>Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock.</p>
